--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    height: 450px;
+    height: 400px;
     text-align: center;
     padding: 50px 0;
     background: linear-gradient(to right, var(--secondary-bg-color), var(--secondary-text-color));
@@ -23,7 +23,7 @@ header{
     align-items: center;
     justify-content: space-between;
     max-width: 1500px;
-    margin: 0 auto;
+    margin: 0 50px;
     position: relative;
 }
 
@@ -78,7 +78,7 @@ body{
 .black{
     position: absolute;
     background-color: var(--secondary-bg-color);
-    top: 550px;
+    top: 500px;
     width: 100%;
     left: 0;
     height: 47.5px;
@@ -100,7 +100,7 @@ nav{
     width: 100%;
     justify-content: center;
     display: flex;
-    margin-top: -25px;
+    margin-top: -75px;
     position: sticky;
     top: 25px;
     z-index: 1000;
@@ -129,6 +129,10 @@ nav .container a:hover{
     color: var(--secondary-text-color);
     font-size: 20px;
     transition: .2s;
+}
+
+nav i {
+    font-size: small !important;
 }
 
 .dropdown {
@@ -214,10 +218,10 @@ img.box-sec{
 }
 
 h3.box-sec{
-    margin-top: -20px;
     justify-content: center;
     background-color: #1e1e1e;
     position: absolute;
+    top: 265px;
     width: 300px;
     height: 50px;
     line-height: 50px;
@@ -234,17 +238,14 @@ h3.box-sec{
 
 .box:hover img.box-sec{
     transform: translateY(-317.5px);
-    transition: .3s;
+    transition: .5s;
+    transition-delay: .2s;
 }
 
 .box:hover h3.box-sec{
     transform: translateY(-65px);
-    transition: .4s;
-}
-
-.box:hover .box h3{
-    transform: translateY(-25px);
-    transition: .3s;
+    transition: .5s;
+    transition-delay: .15s;
 }
 
 .contact li a{
@@ -376,5 +377,27 @@ footer {
 
     .footer-social {
         margin-top: 10px;
+    }
+}
+
+@media screen and (max-width:1800px){
+    body{
+        font-size: 12.5px;
+    }
+    .box{
+        width: 200px;
+        height:200px;
+    }
+    .box img{
+        width: 200px;
+        margin-left: -100px;
+        margin-top: 50px;
+    }
+    h3.box-sec{
+        margin-top: -115px;
+        width: 200px;
+    }
+    .box h3{
+        margin-top: -50px;
     }
 }
